--- a/hdtn/8/index.html
+++ b/hdtn/8/index.html
@@ -20,7 +20,7 @@
         <div id="statistics" class="hidden"></div>
     </main>
     <script type="module">
-        await import('https://tpsquare.github.io/modules/js/tpsm.js');
+        await import('../tpsm.js');
         import('./script.js');
     </script>
 </body>
