--- a/cncgnx/index.html
+++ b/cncgnx/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kịch Chuyện người con gái Nam Xương - Tổ 1</title>
-    <style>*{background-color: black;}</style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div id="loading">Loading... <span>0</span>%</div>
     <script type="module" src="./script.js"></script>
 </body>
 </html>
