--- a/cncgnx/index.html
+++ b/cncgnx/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div id="loading">Loading... <span>0</span>% (2)</div>
+    <div id="loading">Loading... <span>0</span>%</div>
     <script type="module" src="./script.js"></script>
 </body>
 </html>
