--- a/cncgnx/index.html
+++ b/cncgnx/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="vn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kịch Chuyện người con gái Nam Xương - Tổ 1</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
+    <div id="bg">
+        <img src="./assets/cloud2.png" alt="" class="cloud2">
+        <img src="./assets/light.png" alt="" class="light">
+        <img src="./assets/vn.png" alt="" class="vn">
+        <img src="./assets/cloud1.gif" alt="" class="cloud1">
+    </div>
     <div id="loading">Loading... <span>0</span>%</div>
     <script type="module" src="./script.js"></script>
 </body>
+
 </html>
