--- a/cncgnx/index.html
+++ b/cncgnx/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kịch Chuyện người con gái Nam Xương - Tổ 1</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Protest+Riot&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,6 +17,8 @@
         <img src="./assets/light.png" alt="" class="light">
         <img src="./assets/vn.png" alt="" class="vn">
         <img src="./assets/cloud1.gif" alt="" class="cloud1">
+        <div class="txt1">Sân khấu hóa</div>
+        <div class="txt2">Chuyện người con gái Nam Xương</div>
     </div>
     <div id="loading">Loading... <span>0</span>%</div>
     <script type="module" src="./script.js"></script>
