--- a/cncgnx/index.html
+++ b/cncgnx/index.html
@@ -20,6 +20,8 @@
         <div class="txt1">Sân khấu hóa</div>
         <div class="txt2">Chuyện người con gái Nam Xương</div>
     </div>
+    <div id="text">*Văn bản sẽ hiện thị tại đây</div>
+    <div id="cmd"></div>
     <div id="loading">Loading... <span>0</span>%</div>
     <script type="module" src="./script.js"></script>
 </body>
