--- a/cncgnx/index.html
+++ b/cncgnx/index.html
@@ -12,17 +12,19 @@
 </head>
 
 <body>
-    <div id="bg">
-        <img src="./assets/cloud2.png" alt="" class="cloud2">
-        <img src="./assets/light.png" alt="" class="light">
-        <img src="./assets/vn.png" alt="" class="vn">
-        <img src="./assets/cloud1.gif" alt="" class="cloud1">
-        <div class="txt1">Sân khấu hóa</div>
-        <div class="txt2">Chuyện người con gái Nam Xương</div>
-    </div>
-    <div id="text">*Văn bản sẽ hiện thị tại đây</div>
-    <div id="cmd"></div>
-    <div id="loading">Loading... <span>0</span>%</div>
+    <main>
+        <div id="bg">
+            <img src="./assets/cloud2.png" alt="" class="cloud2">
+            <img src="./assets/light.png" alt="" class="light">
+            <img src="./assets/vn.png" alt="" class="vn">
+            <img src="./assets/cloud1.gif" alt="" class="cloud1">
+            <div class="txt1">Sân khấu hóa</div>
+            <div class="txt2">Chuyện người con gái Nam Xương</div>
+        </div>
+        <div id="text">*Văn bản sẽ hiện thị tại đây</div>
+        <div id="cmd"></div>
+        <div id="loading">Loading... <span>0</span>%</div>
+    </main>
     <script type="module" src="./script.js"></script>
 </body>
 
