--- a/cncgnx/index.html
+++ b/cncgnx/index.html
@@ -22,7 +22,8 @@
     </div>
     <div id="text">*Văn bản sẽ hiện thị tại đây</div>
     <div id="cmd"></div>
-    <div id="loading">Loading... <span>0</span>%</div>
+    <div id="btn"></div>
+    <div id="loading">Loading... <span>0</span>% (1)</div>
     <script type="module" src="./script.js"></script>
 </body>
 
