--- a/cncgnx/index.html
+++ b/cncgnx/index.html
@@ -23,7 +23,7 @@
     <div id="text">*Văn bản sẽ hiện thị tại đây</div>
     <div id="cmd"></div>
     <div id="btn"></div>
-    <div id="loading">Loading... <span>0</span>% (2)</div>
+    <div id="loading">Loading... <span>0</span>%</div>
     <script type="module" src="./script.js"></script>
 </body>
 
