--- a/acad/bao-tuong-hoang-sa-va-truong-sa-lich-su-11/index.html
+++ b/acad/bao-tuong-hoang-sa-va-truong-sa-lich-su-11/index.html
@@ -47,7 +47,7 @@
   <div class="container col-xxl-8 px-4 pt-5 mt-5">
     <div class="row flex-lg-row align-items-center g-5 py-5 bg-white rounded-5 shadow">
       <div class="col-lg-6 mt-0">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Biển đảo thiêng liêng - Hoàng Sa và Trường Sa</h1>
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 text-center text-lg-start">Biển đảo thiêng liêng - Hoàng Sa và Trường Sa</h1>
         <p class="lead">Trang web này được tạo ra nhằm hỗ trợ bài <b>báo tường về Hoàng Sa và Trường Sa</b> của <b>nhóm 1 lớp 11A4 (2024 - 2025)</b>. Đây là nơi lưu trữ các tư liệu về lịch sử, địa lý và ý nghĩa của hai quần đảo này, đồng thời cung cấp thêm những thông tin mà chúng em không thể trình bày đầy đủ trên báo tường.</p>
       </div>
       <div class="col-10 col-sm-8 col-lg-6">
@@ -87,7 +87,6 @@
         <li><a href="#VII">VII. Lời kết</a></li>
     </div>
   </div>
-
   <div class="container mt-4">
 
     <div id="I" class="mb-3 bg-white p-4 rounded-5 shadow">
