--- a/acad/bao-tuong-hoang-sa-va-truong-sa-lich-su-11/index.html
+++ b/acad/bao-tuong-hoang-sa-va-truong-sa-lich-su-11/index.html
@@ -12,7 +12,7 @@
       html {
         font-size: 14px;
       }
-      
+
     }
 
     p {
@@ -38,6 +38,8 @@
 
     #menu .level-1>li>a {
       font-weight: bold;
+      justify-content: center;
+      justify-content: left;
     }
   </style>
 </head>
@@ -45,7 +47,7 @@
 <body style="background-color: #E2E2E2">
 
   <div class="container col-xxl-8 px-4 pt-5 mt-5">
-    <div class="row flex-lg-row align-items-center g-5 py-5 bg-white rounded-5 shadow">
+    <div class="row flex-lg-row align-items-center justify-content-center justify-lg-content-left g-5 py-5 bg-white rounded-5 shadow">
       <div class="col-lg-6 mt-0">
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 text-center text-lg-start">Biển đảo thiêng liêng - Hoàng Sa và Trường Sa</h1>
         <p class="lead">Trang web này được tạo ra nhằm hỗ trợ bài <b>báo tường về Hoàng Sa và Trường Sa</b> của <b>nhóm 1 lớp 11A4 (2024 - 2025)</b>. Đây là nơi lưu trữ các tư liệu về lịch sử, địa lý và ý nghĩa của hai quần đảo này, đồng thời cung cấp thêm những thông tin mà chúng em không thể trình bày đầy đủ trên báo tường.</p>
@@ -91,7 +93,13 @@
 
     <div id="I" class="mb-3 bg-white p-4 rounded-5 shadow">
       <h2 class="fw-bold">I. Giới thiệu</h2>
-      <p>Quần đảo Hoàng Sa, nằm kiêu hãnh giữa lòng biển Đông, thuộc quản lý hành chính của thành phố Đà Nẵng. Với tổng diện tích khoảng 30.000 km², Hoàng Sa là một tập hợp của những đảo nhỏ, rạn san hô lung linh, cồn cát vàng óng và bãi đá ngầm đầy bí ẩn, tựa như một bức tranh thiên nhiên tuyệt mỹ. Không chỉ mang vẻ đẹp kỳ vĩ của đất trời, Hoàng Sa còn chứa đựng trong mình những trang sử vàng son của dân tộc Việt Nam, nơi mà mỗi hòn đảo, mỗi rạn san hô đều ghi dấu sự khẳng định chủ quyền mạnh mẽ từ bao đời nay. Đây không chỉ là một phần lãnh thổ thiêng liêng mà còn là biểu tượng của tinh thần bất khuất, sự hy sinh và tình yêu quê hương sâu sắc của người Việt.</p>
+      <div class="d-flex align-items-center flex-column flex-lg-row">
+        <p>Quần đảo Hoàng Sa, nằm kiêu hãnh giữa lòng biển Đông, thuộc quản lý hành chính của thành phố Đà Nẵng. Với tổng diện tích khoảng 30.000 km², Hoàng Sa là một tập hợp của những đảo nhỏ, rạn san hô lung linh, cồn cát vàng óng và bãi đá ngầm đầy bí ẩn, tựa như một bức tranh thiên nhiên tuyệt mỹ. Không chỉ mang vẻ đẹp kỳ vĩ của đất trời, Hoàng Sa còn chứa đựng trong mình những trang sử vàng son của dân tộc Việt Nam, nơi mà mỗi hòn đảo, mỗi rạn san hô đều ghi dấu sự khẳng định chủ quyền mạnh mẽ từ bao đời nay. Đây không chỉ là một phần lãnh thổ thiêng liêng mà còn là biểu tượng của tinh thần bất khuất, sự hy sinh và tình yêu quê hương sâu sắc của người Việt.</p>
+        <div class="col-10 col-sm-8 col-lg-6 p-3 mw-90 mw-lg-50">
+          <img class="d-block mx-lg-auto img-fluid rounded shadow-lg" src="./assets/hoang-sa.jpg" alt="Hoàng Sa">
+          <i class="text-center w-100 d-inline-block">Quần đảo Hoàng Sa</i>
+        </div>
+      </div>
       <p>Quần đảo Trường Sa, thuộc tỉnh Khánh Hòa, vươn mình giữa đại dương xanh thẳm của Biển Đông, là biểu tượng của lòng kiên cường và ý chí bất khuất của dân tộc Việt Nam. Với hơn 100 đảo nhỏ, bãi cạn và rạn san hô, Trường Sa không chỉ đóng vai trò chiến lược về an ninh quốc gia mà còn là một phần quan trọng trong hệ sinh thái biển. Nơi đây, những ngôi làng giữa đại dương được xây dựng với đầy đủ cơ sở hạ tầng hiện đại, bao gồm trường học, bệnh viện và những ngọn hải đăng sừng sững, ngày đêm soi sáng hành trình của tàu thuyền qua lại trên tuyến hàng hải quốc tế. Trường Sa không chỉ là nơi an cư của người dân mà còn là một tiền đồn kiên cường, vững chắc bảo vệ từng tấc biển, tấc đảo thiêng liêng của Tổ quốc Việt Nam.</p>
     </div>
     <hr class="my-4">
