--- a/acad/bao-tuong-hoang-sa-va-truong-sa-lich-su-11/index.html
+++ b/acad/bao-tuong-hoang-sa-va-truong-sa-lich-su-11/index.html
@@ -47,46 +47,51 @@
 <body style="background-color: #E2E2E2">
 
   <div class="container col-xxl-8 px-4 pt-5 mt-5">
-    <div class="row flex-lg-row align-items-center justify-content-center justify-lg-content-left g-5 py-5 bg-white rounded-5 shadow">
-      <div class="col-lg-6 mt-0">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 text-center text-lg-start">Biển đảo thiêng liêng - Hoàng Sa và Trường Sa</h1>
-        <p class="lead">Trang web này được tạo ra nhằm hỗ trợ bài <b>báo tường về Hoàng Sa và Trường Sa</b> của <b>nhóm 1 lớp 11A4 (2024 - 2025)</b>. Đây là nơi lưu trữ các tư liệu về lịch sử, địa lý và ý nghĩa của hai quần đảo này, đồng thời cung cấp thêm những thông tin mà chúng em không thể trình bày đầy đủ trên báo tường.</p>
+    <div class="bg-white rounded-5 shadow p-4">
+      <div class="row flex-lg-row align-items-center justify-content-center justify-lg-content-left g-5 mt-1">
+        <div class="col-lg-6 mt-0">
+          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 text-center text-lg-start">Biển đảo thiêng liêng - Hoàng Sa và Trường Sa</h1>
+          <p class="lead">Trang web này được tạo ra nhằm hỗ trợ bài <b>báo tường về Hoàng Sa và Trường Sa</b> của <b>nhóm 1 lớp 11A4 (2024 - 2025)</b>. Đây là nơi lưu trữ các tư liệu về lịch sử, địa lý và ý nghĩa của hai quần đảo này, đồng thời cung cấp thêm những thông tin mà chúng em không thể trình bày đầy đủ trên báo tường.</p>
+        </div>
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="./assets/nguoi-linh-truong-sa.jpg" class="d-block mx-lg-auto img-fluid" alt="Người lính Trường Sa" width="700" height="500" loading="lazy">
+        </div>
       </div>
-      <div class="col-10 col-sm-8 col-lg-6">
-        <img src="./assets/nguoi-linh-truong-sa.jpg" class="d-block mx-lg-auto img-fluid" alt="Người lính Trường Sa" width="700" height="500" loading="lazy">
-      </div>
+      <i>*Xem trên máy tính để có trải nghiệm tốt nhất!</i>
     </div>
   </div>
 
-  <div id="menu" class="container bg-white rounded-5 shadow my-4 p-4">
-    <h1 class="text-center fw-bold">NỘI DUNG BÀI VIẾT</h1>
-    <div class="w-100">
-      <ul class="level-1 list-unstyled">
-        <li class="mb-1"><a href="#I">I. Giới thiệu</a></li>
-        <li class="mb-1">
-          <a href="#II">II. Lịch sử hình thành và bảo vệ</a>
-          <ul class="list-unstyled tab">
-            <li><a href="#II1">1. Dấu ấn lịch sử khó phai của Hoàng Sa</a></li>
-            <li><a href="#II2">2. Dấu son trong dòng lịch sử của Trường Sa</a></li>
-          </ul>
-        </li>
-        <li class="mb-1"><a href="#III">III. Video về Hoàng Sa và Trường Sa</a></li>
-        <li class="mb-1"><a href="#IV">IV. Sự công nhận của thế giới về chủ quyền của Việt Nam đối với Hoàng Sa và Trường Sa</a>
-          <ul class="list-unstyled tab">
-            <li><a href="#IV1">1. Tuyên bố Cairo (1943)</a></li>
-            <li><a href="#IV2">2. Hội nghị hòa bình San Francisco (1951)</a></li>
-            <li><a href="#IV3">3. Phán quyết của Tòa án Trọng tài thường trực quốc tế về biển Đông (2016)</a></li>
-          </ul>
-        </li>
-        <li class="mb-1">
-          <a href="#V">V. Hoàng Sa, Trường Sa qua những bài thơ, câu hát</a>
-          <ul class="list-unstyled tab">
-            <li><a href="#V1">1. Một số bài thơ</a></li>
-            <li><a href="#V2">2. Những Bài Hát Hay Nhất Về Hoàng Sa, Trường Sa (nhaccuatui.com)</a></li>
-          </ul>
-        </li>
-        <li><a href="#VI">VI. Những lời nhắn gửi về chủ quyền biển đảo</a></li>
-        <li><a href="#VII">VII. Lời kết</a></li>
+  <div id="menu" class="container">
+    <div class="bg-white rounded-5 shadow my-4 p-4">
+      <h1 class="text-center fw-bold">NỘI DUNG BÀI VIẾT</h1>
+      <div class="w-100">
+        <ul class="level-1 list-unstyled">
+          <li class="mb-1"><a href="#I">I. Giới thiệu</a></li>
+          <li class="mb-1">
+            <a href="#II">II. Lịch sử hình thành và bảo vệ</a>
+            <ul class="list-unstyled tab">
+              <li><a href="#II1">1. Dấu ấn lịch sử khó phai của Hoàng Sa</a></li>
+              <li><a href="#II2">2. Dấu son trong dòng lịch sử của Trường Sa</a></li>
+            </ul>
+          </li>
+          <li class="mb-1"><a href="#III">III. Video về Hoàng Sa và Trường Sa</a></li>
+          <li class="mb-1"><a href="#IV">IV. Sự công nhận của thế giới về chủ quyền của Việt Nam đối với Hoàng Sa và Trường Sa</a>
+            <ul class="list-unstyled tab">
+              <li><a href="#IV1">1. Tuyên bố Cairo (1943)</a></li>
+              <li><a href="#IV2">2. Hội nghị hòa bình San Francisco (1951)</a></li>
+              <li><a href="#IV3">3. Phán quyết của Tòa án Trọng tài thường trực quốc tế về biển Đông (2016)</a></li>
+            </ul>
+          </li>
+          <li class="mb-1">
+            <a href="#V">V. Hoàng Sa, Trường Sa qua những bài thơ, câu hát</a>
+            <ul class="list-unstyled tab">
+              <li><a href="#V1">1. Một số bài thơ</a></li>
+              <li><a href="#V2">2. Những Bài Hát Hay Nhất Về Hoàng Sa, Trường Sa (nhaccuatui.com)</a></li>
+            </ul>
+          </li>
+          <li><a href="#VI">VI. Những lời nhắn gửi về chủ quyền biển đảo</a></li>
+          <li><a href="#VII">VII. Lời kết</a></li>
+      </div>
     </div>
   </div>
   <div class="container mt-4">
@@ -100,33 +105,44 @@
           <i class="text-center w-100 d-inline-block">Quần đảo Hoàng Sa</i>
         </div>
       </div>
-      <p>Quần đảo Trường Sa, thuộc tỉnh Khánh Hòa, vươn mình giữa đại dương xanh thẳm của Biển Đông, là biểu tượng của lòng kiên cường và ý chí bất khuất của dân tộc Việt Nam. Với hơn 100 đảo nhỏ, bãi cạn và rạn san hô, Trường Sa không chỉ đóng vai trò chiến lược về an ninh quốc gia mà còn là một phần quan trọng trong hệ sinh thái biển. Nơi đây, những ngôi làng giữa đại dương được xây dựng với đầy đủ cơ sở hạ tầng hiện đại, bao gồm trường học, bệnh viện và những ngọn hải đăng sừng sững, ngày đêm soi sáng hành trình của tàu thuyền qua lại trên tuyến hàng hải quốc tế. Trường Sa không chỉ là nơi an cư của người dân mà còn là một tiền đồn kiên cường, vững chắc bảo vệ từng tấc biển, tấc đảo thiêng liêng của Tổ quốc Việt Nam.</p>
+      <div class="d-flex align-items-center flex-column flex-lg-row">
+        <p>Quần đảo Trường Sa, thuộc tỉnh Khánh Hòa, vươn mình giữa đại dương xanh thẳm của Biển Đông, là biểu tượng của lòng kiên cường và ý chí bất khuất của dân tộc Việt Nam. Với hơn 100 đảo nhỏ, bãi cạn và rạn san hô, Trường Sa không chỉ đóng vai trò chiến lược về an ninh quốc gia mà còn là một phần quan trọng trong hệ sinh thái biển. Nơi đây, những ngôi làng giữa đại dương được xây dựng với đầy đủ cơ sở hạ tầng hiện đại, bao gồm trường học, bệnh viện và những ngọn hải đăng sừng sững, ngày đêm soi sáng hành trình của tàu thuyền qua lại trên tuyến hàng hải quốc tế. Trường Sa không chỉ là nơi an cư của người dân mà còn là một tiền đồn kiên cường, vững chắc bảo vệ từng tấc biển, tấc đảo thiêng liêng của Tổ quốc Việt Nam.</p>
+        <div class="col-10 col-sm-8 col-lg-6 p-3 mw-90 mw-lg-50">
+          <img class="d-block mx-lg-auto img-fluid rounded shadow-lg" src="./assets/quoc-ki-dao-truong-sa.jpg" alt="Cờ Tổ quốc trên nóc hội trường của đảo Trường Sa">
+          <i class="text-center w-100 d-inline-block">Cờ Tổ quốc trên nóc hội trường của đảo Trường Sa</i>
+        </div>
+      </div>
     </div>
     <hr class="my-4">
     <div id="II" class="mb-3 bg-white p-4 rounded-5 shadow">
       <h2 class="fw-bold">II. Lịch sử hình thành và bảo vệ</h2>
       <div id="II1" class="ms-4">
         <h4 class="fw-bold">1. Dấu ấn lịch sử khó phai của Hoàng Sa</h4>
-        <ul>
-          <li>
-            <span><b>Thế kỉ XVII: </b>Đội Hoàng Sa, được thành lập dưới thời Chúa Nguyễn, đã khai thác, quản lý và bảo vệ quần đảo này, ghi lại trong <a href="https://vi.wikipedia.org/wiki/Ph%E1%BB%A7_bi%C3%AAn_t%E1%BA%A1p_l%E1%BB%A5c"><i>"Phủ biên tạp lục"</i></a> của Lê Quý Đôn (1776).</span>
-          </li>
-          <li>
-            <span><b>Thời nhà Nguyễn (1802 - 1945):</b> Các triều vua đã cử đoàn người đến dựng bia, đo đạc và vẽ bản đồ, khẳng định Hoàng Sa là lãnh thổ không thể tách rời của nước Đại Nam, được thể hiện rõ nét trong <a href="https://vi.wikipedia.org/wiki/%C4%90%E1%BA%A1i_Nam_nh%E1%BA%A5t_th%E1%BB%91ng_to%C3%A0n_%C4%91%E1%BB%93"><i>"Đại Nam nhất thống toàn đồ"</i></a> (1838).</span>
-          </li>
-          <li>
-            <span><b>Từ 1930 đến 1945:</b> Dưới thời Pháp thuộc, các công trình như hải đăng và trạm khí tượng đã được xây dựng, nằm dưới sự quản lý của tỉnh Thừa Thiên.</span>
-          </li>
-          <li>
-            <span><b>Từ 1954 đến 1974:</b> Chính quyền Việt Nam Cộng hòa tiếp quản và tiếp tục duy trì sự hiện diện trên quần đảo này.</span>
-          </li>
-          <li><span>Mới đây người dân huyện đảo Lý Sơn đã tìm thấy một sắc chỉ của vua triều Nguyễn năm 1835 cử dân binh ra canh giữ đảo Hoàng Sa.</span></li>
-        </ul>
+        <div class="d-flex align-items-center flex-column flex-lg-row">
+          <ul>
+            <li>
+              <span><b>Thế kỉ XVII: </b>Đội Hoàng Sa, được thành lập dưới thời Chúa Nguyễn, đã khai thác, quản lý và bảo vệ quần đảo này, ghi lại trong <a target="_blank" href="https://vi.wikipedia.org/wiki/Ph%E1%BB%A7_bi%C3%AAn_t%E1%BA%A1p_l%E1%BB%A5c"><i>"Phủ biên tạp lục"</i></a> của Lê Quý Đôn (1776).</span>
+            </li>
+            <li>
+              <span><b>Thời nhà Nguyễn (1802 - 1945):</b> Các triều vua đã cử đoàn người đến dựng bia, đo đạc và vẽ bản đồ, khẳng định Hoàng Sa là lãnh thổ không thể tách rời của nước Đại Nam, được thể hiện rõ nét trong <a target="_blank" href="https://vi.wikipedia.org/wiki/%C4%90%E1%BA%A1i_Nam_nh%E1%BA%A5t_th%E1%BB%91ng_to%C3%A0n_%C4%91%E1%BB%93"><i>"Đại Nam nhất thống toàn đồ"</i></a> (1838).</span>
+            </li>
+            <li>
+              <span><b>Từ 1930 đến 1945:</b> Dưới thời Pháp thuộc, các công trình như hải đăng và trạm khí tượng đã được xây dựng, nằm dưới sự quản lý của tỉnh Thừa Thiên.</span>
+            </li>
+            <li>
+              <span><b>Từ 1954 đến 1974:</b> Chính quyền Việt Nam Cộng hòa tiếp quản và tiếp tục duy trì sự hiện diện trên quần đảo này.</span>
+            </li>
+            <li><span>Mới đây người dân huyện đảo Lý Sơn đã tìm thấy một sắc chỉ của vua triều Nguyễn năm 1835 cử dân binh ra canh giữ đảo Hoàng Sa.</span></li>
+          </ul>
+          <div class="col-10 col-sm-8 col-lg-5 p-3" style="max-width: 330px;">
+            <img class="d-block img-fluid rounded shadow-lg" src="./assets/dai-nam-nhat-thong-toan-do.jpg" alt="Đại Nam nhất thống toàn đồ">
+          </div>
+        </div>
       </div>
       <div id="II2" class="ms-4">
         <h4 class="fw-bold">2. Dấu son trong dòng lịch sử của Trường Sa</h4>
         <ul>
-          <li><span><b>Thế kỷ XVII:</b> Dưới thời Chúa Nguyễn, Đội Bắc Hải đã hoạt động ở Trường Sa, khẳng định chủ quyền được ghi chép trong <a href="https://vi.wikipedia.org/wiki/Ph%E1%BB%A7_bi%C3%AAn_t%E1%BA%A1p_l%E1%BB%A5c"><i>"Phủ biên tạp lục"</i></a> của Lê Quý Đôn (1776).</span></li>
+          <li><span><b>Thế kỷ XVII:</b> Dưới thời Chúa Nguyễn, Đội Bắc Hải đã hoạt động ở Trường Sa, khẳng định chủ quyền được ghi chép trong <a target="_blank" href="https://vi.wikipedia.org/wiki/Ph%E1%BB%A7_bi%C3%AAn_t%E1%BA%A1p_l%E1%BB%A5c"><i>"Phủ biên tạp lục"</i></a> của Lê Quý Đôn (1776).</span></li>
           <li><span><b>Năm 1933:</b> Chính quyền thực dân Pháp chính thức sáp nhập Trường Sa vào tỉnh Bà Rịa, dựng bia khẳng định chủ quyền trên đảo Trường Sa Lớn.</span></li>
           <li><span><b>Từ 1956 đến 1975:</b> Việt Nam Cộng hòa duy trì quyền quản lý, xây dựng đèn biển và trạm khí tượng, thể hiện sự hiện diện không ngừng nghỉ tại đây.</span></li>
           <li><span><b>Từ 1988 đến nay:</b> Với ý chí vững vàng, Việt Nam đã kiểm soát nhiều đảo quan trọng như Trường Sa Lớn, Sinh Tồn, đồng thời duy trì cả lực lượng dân sự lẫn quân sự để bảo vệ từng tấc đất, từng làn nước quê hương.</span></li>
@@ -138,7 +154,7 @@
       <h2 class="fw-bold">III. Video về Hoàng Sa và Trường Sa</h2>
       <div class="ms-4 d-flex flex-column justify-content-center align-items-center">
         <iframe style="aspect-ratio: 16 / 9; max-width: 100%;" width="800" src="https://www.youtube.com/embed/7BMaOzoQODs?si=W3BedItsENanxh0z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <span><i>Xem thêm:</i> <a href="https://youtu.be/c7t6pCLbMfg">Tóm Tắt Lịch Sử Quần Đảo Hoàng Sa và Trường Sa | Việt Nam</a></span>
+        <span><i>Xem thêm:</i> <a target="_blank" href="https://youtu.be/c7t6pCLbMfg">Tóm Tắt Lịch Sử Quần Đảo Hoàng Sa và Trường Sa | Việt Nam</a></span>
       </div>
     </div>
     <hr class="my-4">
@@ -186,7 +202,7 @@
             <p>Có anh lính trẻ giục trâu ra đồng</p>
             <p>Luống cày tha thiết bên sông</p>
             <p>Bỗng tung sóng trắng điệp trùng Trường Sa."</p>
-            <p style="padding-left: 1rem;" class="fst-normal text-end">(Trích <i>Trường Sa</i> (1994), Nguyễn Thế Kỷ)</p>
+            <p style="padding-left: 1rem;" class="fst-normal text-end">(Trích <a target="_blank" href="https://www.thivien.net/Nguy%E1%BB%85n-Th%E1%BA%BF-K%E1%BB%B7/Tr%C6%B0%E1%BB%9Dng-Sa/poem-_LwLvZqm6SMQfTwqrvxpaQ"><i>Trường Sa</i> (1994), Nguyễn Thế Kỷ</a>)</p>
           </div>
           <br>
           <div class="grp fst-italic">
@@ -194,7 +210,7 @@
             <p>Gió hồng hoang ào ạt phía Hoàng Sa</p>
             <p>Bao xương máu đắp hình hài Tổ quốc</p>
             <p>Ấp cờ đỏ lên tim mắt bỗng lệ nhoà"</p>
-            <p style="padding-left: 1rem;" class="fst-normal text-end">(Trích <i>Thao thức Trường Sa</i> (2012), Nguyễn Thế Kỷ)</p>
+            <p style="padding-left: 1rem;" class="fst-normal text-end">(Trích <a target="_blank" href="https://www.thivien.net/Nguy%E1%BB%85n-Th%E1%BA%BF-K%E1%BB%B7/Thao-th%E1%BB%A9c-Tr%C6%B0%E1%BB%9Dng-Sa/poem-pV9FYg3sP3MePVw86rK9EQ"><i>Thao thức Trường Sa</i> (2012), Nguyễn Thế Kỷ)</a></p>
           </div>
           <br>
           <div class="grp fst-italic">
@@ -202,7 +218,7 @@
             <p>Đêm quặn lòng máu thịt Hoàng Sa</p>
             <p>Ngày đỏ mắt Trường Sa giông bão</p>
             <p>Lại bút, gươm giữ cõi, xây nhà."</p>
-            <p style="padding-left: 1rem;" class="fst-normal text-end">(Trích <i>Tổ quốc</i> (2015), Nguyễn Thế Kỷ)</p>
+            <p style="padding-left: 1rem;" class="fst-normal text-end">(Trích <a target="_blank" href="https://thanhnien.vn/to-quoc-tho-cua-nguyen-the-ky-185499386.htm"><i>Tổ quốc</i> (2015), Nguyễn Thế Kỷ)</a></p>
           </div>
           <br>
           <div class="grp fst-italic">
@@ -210,7 +226,7 @@
             <p>Có một phần máu thịt ở Hoàng Sa</p>
             <p>Ngàn năm trước con theo cha xuống biển</p>
             <p>Mẹ lên rừng thương nhớ mãi Trường Sa"</p>
-            <p style="padding-left: 1rem;" class="fst-normal text-end">(Trích <i>Tổ quốc nhìn từ biển</i> (2009), Nguyễn Việt Chiến)</p>
+            <p style="padding-left: 1rem;" class="fst-normal text-end">(Trích <a target="_blank" href="https://www.thivien.net/Nguy%e1%bb%85n-Vi%e1%bb%87t-Chi%e1%ba%bfn/T%e1%bb%95-qu%e1%bb%91c-nh%c3%acn-t%e1%bb%ab-bi%e1%bb%83n/poem-8PHIc_mcTZ-wlkeVABLOsw"><i>Tổ quốc nhìn từ biển</i> (2009), Nguyễn Việt Chiến)</a></p>
           </div>
         </div>
       </div>
