--- a/acad/bao-tuong-hoang-sa-va-truong-sa-lich-su-11/index.html
+++ b/acad/bao-tuong-hoang-sa-va-truong-sa-lich-su-11/index.html
@@ -231,7 +231,8 @@
         </div>
       </div>
       <div id="V2" class="ms-4 d-flex flex-column justify-content-center align-items-center">
-        <h4 class="fw-bold w-100">2. Những Bài Hát Hay Nhất Về Hoàng Sa, Trường Sa (nhaccuatui.com)</h4>
+        <h4 class="fw-bold w-100">2. Những bài hát hay nhất về Hoàng Sa, Trường Sa (nhaccuatui.com)</h4>
+        <i>*Bên dưới là cửa sổ của nhaccuatui.com (có thể phát nhạc trực tiếp tại <a href="#V2">trang này</a>).</i>
         <iframe src="https://www.nhaccuatui.com/lh/normal/cILJfgvIcPc2" style="aspect-ratio: 62 / 55; max-width: 100%;" width="620" frameborder="0" allowfullscreen allow="autoplay"></iframe>
       </div>
     </div>
