--- a/acad/bao-tuong-hoang-sa-va-truong-sa-lich-su-11/index.html
+++ b/acad/bao-tuong-hoang-sa-va-truong-sa-lich-su-11/index.html
@@ -54,7 +54,7 @@
           <p class="lead">Trang web này được tạo ra nhằm hỗ trợ bài <b>báo tường về Hoàng Sa và Trường Sa</b> của <b>nhóm 1 lớp 11A4 (2024 - 2025)</b>. Đây là nơi lưu trữ các tư liệu về lịch sử, địa lý và ý nghĩa của hai quần đảo này, đồng thời cung cấp thêm những thông tin mà chúng em không thể trình bày đầy đủ trên báo tường.</p>
         </div>
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./assets/nguoi-linh-truong-sa.jpg" class="d-block mx-lg-auto img-fluid" alt="Người lính Trường Sa" width="700" height="500" loading="lazy">
+          <img src="./assets/nguoi-linh-truong-sa.jpg" class="d-block mx-lg-auto img-fluid" alt="Người lính Trường Sa" width="700" height="500">
         </div>
       </div>
       <i>*Xem trên máy tính để có trải nghiệm tốt nhất!</i>
